--- a/common_loc_wt_eloc/pubspec.yaml
+++ b/common_loc_wt_eloc/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
 
   salpha_package:
     git:
-      url: https://github.com/daegeun-dtx/salpha_package_flutter.git
-      ref: translation_common_develop
+      url: https://github.com/sadtx/salpha_package_flutter.git
+      ref: develop
 
 
   # The following adds the Cupertino Icons font to your application.
