--- a/common_loc_wt_getx/pubspec.yaml
+++ b/common_loc_wt_getx/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
 
   salpha_package:
     git:
-      url: https://github.com/daegeun-dtx/salpha_package_flutter.git
-      ref: 3b819a034b0649747b5c336afacb4fee852231db
+      url: https://github.com/sadtx/salpha_package_flutter.git
+      ref: develop
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
