Update: 공통 패키지에서 GetX를 위한 번역 파일과 번역 키 값에 대한 보조 클래스의 내보내기 경로 변경을 한 것을 반영

--- a/common_loc_wt_eloc/pubspec.yaml
+++ b/common_loc_wt_eloc/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
 
   salpha_package:
     git:
-      url: https://github.com/sadtx/salpha_package_flutter.git
-      ref: develop
+      url: https://github.com/daegeun-dtx/salpha_package_flutter.git
+      ref: f7b67e895abb4d7b9e4b2f5fecaf06f55389beb9
 
 
   # The following adds the Cupertino Icons font to your application.
