--- a/common_loc_wt_floc/pubspec.yaml
+++ b/common_loc_wt_floc/pubspec.yaml
@@ -2,7 +2,7 @@ name: common_loc_wt_floc
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.5 <4.0.0'
+  sdk: ">=3.0.5 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,8 +33,8 @@ dependencies:
 
   salpha_package:
     git:
-      url: https://github.com/sadtx/salpha_package_flutter.git
-      ref: develop
+      url: https://github.com/daegeun-dtx/salpha_package_flutter.git
+      ref: f7b67e895abb4d7b9e4b2f5fecaf06f55389beb9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,7 +60,6 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   generate: true
-
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
