--- a/common_loc_wt_getx/pubspec.yaml
+++ b/common_loc_wt_getx/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
 
   salpha_package:
     git:
-      url: https://github.com/daegeun-dtx/salpha_package_flutter.git
-      ref: f7b67e895abb4d7b9e4b2f5fecaf06f55389beb9
+      url: https://github.com/sadtx/salpha_package_flutter.git
+      ref: 1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
